--- a/style.css
+++ b/style.css
@@ -22,3 +22,10 @@ h1{
 span {
     color: white;
 }
+
+#stripe {
+    background: white;
+    height: 30px;
+    text-align: center;
+    color: black;
+}
